# energy_coarse_graining_flow

./: LICENSE_SHORT  README.md  pyproject.toml
ecg/: bijections.py  distributions.py  models.py  utils.py  visualization.py
ecg/chemtrain_mod/: custom_energy.py  custom_prior.py  custom_prior_new.py
ecg/targets/: aldp.py  base.py  dw.py  gmm.py
ecg/train/: loops.py  losses.py  optimizer.py  train_utils.py
examples/: example_aldp.py  example_dw.py  example_gmm.py
examples/data/: ala2_cg_heavy_2_7nm.gro  alanine_heavy.toml
examples/data/prior/: Alanine_dipeptide_heavy_eq_improper.npy  Alanine_dipeptide_heavy_eq_improper_variance.npy
pretrained_models/relative_entropy_dimenet_aldp/: pretrained_params_re_aldp.pkl
